--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -17,6 +17,15 @@ h3, h4 {
     color: rbg(100,100,100)
 }
 
+.App {
+    transition: all 0.5s ease;
+}
+
+.library-active {
+    margin-left: 30%;
+}
+
+
 @import "./song";
 @import "./player";
 @import "./library";
