--- a/src/style/_song.scss
+++ b/src/style/_song.scss
@@ -1,25 +1,100 @@
-.song-container {
-    min-height: 60vh;
+.song {
+    height: 70vh;
+    width: 80%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
-    img{
-        width: 20%;
-        border-radius: 50%;
-    }
-    h2{
-        padding: 3rem 1rem 1rem 1rem;
-    }
-    h3{
-        padding: 1rem;
-    }
-}
-
-@media screen and (max-width: 768px){
-    .song-container{
-        img{
-            width: 60%;
+        .song__img {
+            position: relative;
+            width: 100%;
+        }
+        .song__img img {
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+        }
+        .song__img--deck {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+            height: 600px;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+        }
+        .song__img--cover {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: 460px;
+        }
+         
+        .rotate {
+            animation: rotate 80s linear forwards infinite;
+          }
+        
+        @keyframes rotate {
+            from {
+              transform:  translate(-50%, -50%) rotate(0deg);
+            }
+            to {
+              transform:  translate(-50%, -50%) rotate(360deg);
+            }
+          }
+     
+        .song__data {
+            font-size: 1.5em;
+            letter-spacing: 0.2em;
+            padding: 1em;
+            height: 20vh;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            text-align: center;
         }
     }
-}
+    
+    @media screen and (max-width: 1280px) {
+        .song {
+            flex-direction: column;
+            .song__img {
+                height: 400px;
+            }
+            .song__img--deck {
+                height: 90%;
+            }
+            .song__img--cover {
+                height: 70%;
+            }
+        }
+        .song__data {
+            order: 1;
+            font-size: 1em !important;
+        }
+    }
+    
+    @media screen and (max-width: 800px) and (orientation: landscape) { 
+        .song {
+            flex-direction: row;
+            height: 65vh;
+            .song__img--deck {
+                height: 230px;
+            }
+            .song__img--cover {
+                height: 180px;   
+            }
+        }
+        
+        .song__data {
+            margin-top: -35px;
+        }
+    }
