--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -3,28 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
-h1,
-h2,
-h3{
-    color: rgb(54, 54, 54);
-}
 
 body {
-    font-family: "Lato", sans-serif
-}
-h3, h4 {
-    font-weight: 400;
-    color: rgb(100,100,100)
+    font-family: 'Playfair Display', serif;
+    font-weight: 200;
+    background-color: rgb(26, 21, 21);
+    background-image: url("../background.png");
+    background-size: cover;
+    color: #fff;
 }
 
 .App {
-    transition: all 0.5s ease;
+    width: 90vw;
+    margin: 0 auto;
 }
-
-.library-active {
-    margin-left: 30%;
-}
-
 
 @import "./song";
 @import "./player";
